# music-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml  main_android.cpp
separated_class/: AudioEngine.cpp  AudioEngine.h  MarqueeLabel.cpp  MarqueeLabel.h  MusicPlayerWindow.cpp  MusicPlayerWindow.h  TextureLoader.cpp  TextureLoader.h
